weather JAR added

--- a/src/main/resources/dialogs_en.properties
+++ b/src/main/resources/dialogs_en.properties
@@ -1,4 +1,7 @@
 command_not_recognized = Command not recognized
+command_was_broke=Command %s was broke
+type_city=Type your city
+city_changed=City was changed
 hello_nice_to_meet_you = Hello %s, nice to meet you!
 welcome_back = Welcome back, %s
 help = HELP\n\
