--- a/src/main/resources/dialogs_ru.properties
+++ b/src/main/resources/dialogs_ru.properties
@@ -1,4 +1,7 @@
 command_not_recognized = Команда не поддерживается
+command_was_broke=Команда %s прервана
+type_city=Введите ваш город
+city_changed=Город установлен
 hello_nice_to_meet_you = Привет %s, приятно познакомиться!
 welcome_back = Рад видеть вас снова, %s
 help = СПРАВКА\n\
