--- a/src/main/resources/dialogs_ru.properties
+++ b/src/main/resources/dialogs_ru.properties
@@ -1,15 +1,19 @@
 command_not_recognized = Команда не поддерживается
-command_was_broke=Команда %s прервана
+notify_was_created=Оповещение создано
+not_a_valid_hour_value=Значение на является часом дня, попробуйте еще раз
+not_a_valid_minute_value=Значение на является часом минутой, попробуйте еще раз
+not_a_valid_integer_value=Значение не является числом, попробуйте еще раз
+select_minute_notify=Выберите минуту для оповещения
+select_hour_notify=Выберите час для оповещения
+command_out_of_date=Ответ на команду устарел, начните команду заново
+command_was_broke=Команда прервана
 type_city=Введите ваш город
 city_changed=Город установлен
 hello_nice_to_meet_you = Привет %s, приятно познакомиться!
 welcome_back = Рад видеть вас снова, %s
-help = СПРАВКА\n\
+help=СПРАВКА\n\
   Используйте основное меню, оно находится в нижнем левом углу чата.\n\
   Выберите действие и следуйте моим подсказкам.
-support_languages = Я поддерживаю следующие языки:\n\
-  "english - code 'en'\n\
-  "русский - код 'ru'\n\
-  "Пожалуйста, введите код языка или выберите другую команду
+support_languages=Пожалуйста, выберите язык
 cant_recognize_lang_code = Не удалось распознать код языка '$s'. Если вы передумали изменять язык напишите '/break'
 language_changed = Язык успешно изменен
