--- a/src/main/resources/weather-view_en.properties
+++ b/src/main/resources/weather-view_en.properties
@@ -1,5 +1,5 @@
 # Weather presentation
-there_is_weather_today=There is weather today (%s)
+there_is_weather_today=There is weather today (%s) in city $s
 there_is_weather_hourly_forecast=There is weather hourly forecast by %s
 there_is_weather_daily_forecast=There is weather daily forecast by %s
 date=%s
