--- a/src/main/resources/weather-view_ru.properties
+++ b/src/main/resources/weather-view_ru.properties
@@ -1,5 +1,5 @@
 # Weather presentation
-there_is_weather_today=Погода на сегодня (%s)
+there_is_weather_today=Погода на сегодня (%s), в городе %s
 there_is_weather_hourly_forecast=Прогноз подгоды в %s по часам
 there_is_weather_daily_forecast=Прогноз подгоды в %s по дням
 date=%s
