--- a/src/main/resources/dialogs_en.properties
+++ b/src/main/resources/dialogs_en.properties
@@ -1,5 +1,12 @@
 command_not_recognized = Command not recognized
-command_was_broke=Command %s was broke
+notify_was_created=Notification was created
+not_a_valid_hour_value=Value not a valid hour, try one more time
+not_a_valid_minute_value=Value not a valid minute, try one more time
+not_a_valid_integer_value=Value not a integer, try one more time
+select_minute_notify=Select the minute of notification
+select_hour_notify=Select the hour of notification
+command_out_of_date=Answer on command out of date, start command again
+command_was_broke=Command was broke
 type_city=Type your city
 city_changed=City was changed
 hello_nice_to_meet_you = Hello %s, nice to meet you!
@@ -7,9 +14,6 @@ welcome_back = Welcome back, %s
 help = HELP\n\
   Use main menu, there is locating in the lower left corner under chat.\n\
   Select menu item and follow my recommendations.
-support_languages = I'm support follow languages:\n\
-  "english - code 'en'\n\
-  "русский - код 'ru'\n\
-  "Please type language code or select another command
+support_languages=Please select language
 cant_recognize_lang_code = Can't recognize language code '$s'. If you want cancel  this operation type '/break'
 language_changed = Language was changed
