command /notification was added

--- a/src/main/resources/dialogs_en.properties
+++ b/src/main/resources/dialogs_en.properties
@@ -1,11 +1,12 @@
 command_not_recognized = Command not recognized
+created_notifications=Here is created notifications:
+created_notifications_position=%s - weather in city %s
 notify_was_created=Notification was created
 not_a_valid_hour_value=Value not a valid hour, try one more time
 not_a_valid_minute_value=Value not a valid minute, try one more time
 not_a_valid_integer_value=Value not a integer, try one more time
 select_minute_notify=Select the minute of notification
 select_hour_notify=Select the hour of notification
-command_out_of_date=Answer on command out of date, start command again
 command_was_broke=Command was broke
 type_city=Type your city
 city_changed=City was changed
