--- a/src/main/resources/dialogs_ru.properties
+++ b/src/main/resources/dialogs_ru.properties
@@ -1,11 +1,12 @@
 command_not_recognized = Команда не поддерживается
+created_notifications=Созданные оповещения:
+created_notifications_position=%s - погода в городе %s
 notify_was_created=Оповещение создано
 not_a_valid_hour_value=Значение на является часом дня, попробуйте еще раз
 not_a_valid_minute_value=Значение на является часом минутой, попробуйте еще раз
 not_a_valid_integer_value=Значение не является числом, попробуйте еще раз
 select_minute_notify=Выберите минуту для оповещения
 select_hour_notify=Выберите час для оповещения
-command_out_of_date=Ответ на команду устарел, начните команду заново
 command_was_broke=Команда прервана
 type_city=Введите ваш город
 city_changed=Город установлен
