Changes: - spring dependencies refactored - tests of command refactored - test notification added

--- a/src/main/resources/dialogs_en.properties
+++ b/src/main/resources/dialogs_en.properties
@@ -9,7 +9,7 @@ select_minute_notify=Select the minute of notification
 select_hour_notify=Select the hour of notification
 command_was_broke=Command was broke
 type_city=Type your city
-city_changed=City was changed
+city_changed=I remembered city
 hello_nice_to_meet_you = Hello %s, nice to meet you!
 welcome_back = Welcome back, %s
 help = HELP\n\
