--- a/src/main/resources/dialogs_ru.properties
+++ b/src/main/resources/dialogs_ru.properties
@@ -9,7 +9,7 @@ select_minute_notify=Выберите минуту для оповещения
 select_hour_notify=Выберите час для оповещения
 command_was_broke=Команда прервана
 type_city=Введите ваш город
-city_changed=Город установлен
+city_changed=Я запомнил город
 hello_nice_to_meet_you = Привет %s, приятно познакомиться!
 welcome_back = Рад видеть вас снова, %s
 help=СПРАВКА\n\
