- new tests was created - ru tests was removed

--- a/src/main/resources/dialogs_en.properties
+++ b/src/main/resources/dialogs_en.properties
@@ -1,4 +1,5 @@
 command_not_recognized = Command not recognized
+cant_find_notifications=No one notification have been created yet
 created_notifications=Here is created notifications:
 created_notifications_position=%s - weather in city %s
 notify_was_created=Notification was created
