--- a/src/main/resources/dialogs_ru.properties
+++ b/src/main/resources/dialogs_ru.properties
@@ -1,4 +1,5 @@
 command_not_recognized = Команда не поддерживается
+cant_find_notifications=Пока еще не создано оповещений
 created_notifications=Созданные оповещения:
 created_notifications_position=%s - погода в городе %s
 notify_was_created=Оповещение создано
